@@ -9,39 +9,38 @@ import org.springframework.beans.BeanUtils;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Getter
 @Setter
 public class CadastroLocalEventoDTO {
     private EnderecoDTO endereco;
     private String nome;
-    private String descricao;
-    private String horarioInicioFuncionamento;
-    private String horarioFinalFuncionamento;
+    private String bio;
+    private String horarioCostumeiroPowerSound;
+    private String horarioCostumeiroInicioShow;
     private List<EquipamentoLocalEventoDTO> equipamentos = new ArrayList<>();
 
     public LocalEvento toEntity() {
         LocalEvento entity = new LocalEvento();
-        BeanUtils.copyProperties(this, entity);
-
-        if(this.endereco != null)
-            BeanUtils.copyProperties(this.endereco, entity.getEndereco());
-
-        // Proprietário logado
+        entity.setNome(this.nome);
+        entity.setBio(this.bio);
+        entity.setHorarioCostumeiroPowerSound(this.horarioCostumeiroPowerSound);
+        entity.setHorarioCostumeiroInicioShow(this.horarioCostumeiroInicioShow);
         entity.setProprietario(Context.getUsuarioLogado());
 
-        // Equipamentos
+        if (this.endereco != null) {
+            BeanUtils.copyProperties(this.endereco, entity.getEndereco());
+        }
+
         List<EquipamentoLocalEvento> equipamentosEntity = equipamentos.stream()
                 .map(dto -> {
                     EquipamentoLocalEvento e = dto.toEntity();
-                    e.setLocalEvento(entity); // ESSENCIAL
+                    e.setLocalEvento(entity);
                     return e;
-                }).toList();
-
+                }).collect(Collectors.toList());
         entity.setEquipamentos(equipamentosEntity);
 
         return entity;
     }
-
-
 }
